Add stripe terminal endpoint
